overflow issue fixed

--- a/src/home.css
+++ b/src/home.css
@@ -9,8 +9,9 @@
     font-size: 2rem;
     margin-top: 7rem;
     width: 100%;
-    padding-left: 1rem;
+    padding-left: 2rem;
     padding-bottom: 0rem;
+    padding-top: 1rem;
 }
 
 .col
