--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 .body {
   background: #EFE7DB;
-  margin: 0
+  margin: 0;
+  overflow-x: hidden;
 }
 
 @import url("https://fonts.googleapis.com/css?family=Montserrat:900i&display=swap");
